kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dummy-ingest-api
  name: dummy-ingest-api
  namespace: devops
spec:
  ports:
  - port: 8080 
    protocol: TCP
    targetPort: 80
  selector:
    app: dummy-ingest-api
  type: ClusterIP
